--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,3 +2,88 @@
 	margin: 0;
 	padding: 0;
 }
+
+html {
+	width: 100%;
+	height: 100%;
+}
+
+body {
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	background-color: #2F3535;
+	color: white;
+}
+
+header {
+	width: 100%;
+	height: 20%;
+	background-color: blue;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+h1 {
+	text-align: center;
+	width: 100%;
+	height: 20%;
+}
+
+main {
+	height: 60%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+table {
+	width: 90%;
+	height: 90%;
+	background-color: green;
+	border-radius: 25px;
+}
+
+tr{
+	background-color: blue;
+}
+
+td {
+	border-radius: 100%;
+}
+
+footer {
+	width: 100%;
+	height: 20%;
+	background-color: red;
+}
+
+#choose {
+	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.5);
+	top: 0;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+/*	display: none;*/
+}
+#choose p {
+	width: 100%;
+	text-align: center;
+	background-color: red;
+	font-size: 5vw;
+}
+
+#choose img {
+	border: 1px solid rgba(0, 0, 0, 0);
+	width: 19%;
+	height: 19%;
+	margin: auto;
+	border-radius: 25px;
+}
