--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: "Pokemon_font";
+	src: url('../FONT/Pokemon_Solid.ttf');
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -6,6 +11,8 @@
 html {
 	width: 100%;
 	height: 100%;
+	font-family: "Pokemon_font";
+	text-shadow: 2px 2px 2px black;
 }
 
 body {
@@ -21,15 +28,24 @@ body {
 header {
 	width: 100%;
 	height: 20%;
-	background-color: blue;
+	background-image: url("../IMG/pokeball.svg");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: 0% 48%;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 }
 
 h1 {
-	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 100%;
 	height: 20%;
+	font-size: 7vw;
+	color: #FFDE00;
+	margin-top: 1%;
 }
 
 main {
@@ -61,6 +77,7 @@ footer {
 	background-color: red;
 }
 
+
 #choose {
 	z-index: 1;
 	background-color: rgba(0, 0, 0, 0.5);
@@ -71,13 +88,39 @@ footer {
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
-/*	display: none;*/
+	display: none;
 }
-#choose p {
+
+#play {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 20%;
+	font-size: 4vw;
+	color: #FFDE00;
+	border-radius: 25px;
+}
+
+#play:hover {
+	color: red;
+	transition-duration: 2s;
+}
+
+#players {
 	width: 100%;
-	text-align: center;
+	display: flex;
+	justify-content: center;
 	background-color: red;
+}
+
+#player {
+	width: 20%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	font-size: 5vw;
+	border-radius: 25px;
+	background-color: rgba(200, 250, 50, 1);
 }
 
 #choose img {
