--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,18 +60,19 @@ main {
 .divPlayers {
 	width: 200px;
 	height: 300px;
-	background-color: red;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin: auto;
 }
 
 .shadowPlayers {
 	z-index: 1;
 	background-color: rgba(0, 0, 0, 0.9);
 	position: relative;
-	width: 200px;
-	height: 300px;
+	width: 150px;
+	height: 250px;
+	transition-duration: 0.5s;
 }
 
 .divPlayers p {
@@ -84,19 +85,19 @@ main {
 	background-color: blue;
 	z-index: 0;
 	position: absolute;
+	transition-duration: 0.5s;
 }
 #playerOne {
-	border: 3px solid rgba(200, 250, 50, 1);
+	background-color: rgba(200, 250, 50, 1);
 }
 
 #playerTwo {
-	border: 3px solid rgba(50, 250, 200, 1);
+	background-color: rgba(50, 250, 200, 1);
 }
 
 #playerOneImg, #playerTwoImg {
 	height: 80%;
 	width: 100%;
-	background-image: url('../IMG/abra.svg');
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
@@ -132,7 +133,7 @@ footer {
 
 
 #choose {
-	z-index: 1;
+	z-index: 2;
 	background-color: rgba(0, 0, 0, 0.5);
 	top: 0;
 	left: 0;
