--- a/CSS/style.css
+++ b/CSS/style.css
@@ -121,8 +121,10 @@ main {
 	width: 100%;
 	height: 10%;
 	margin: 38% 0;
-	background-color: blue;
 	border-radius: 100%;
+	background-color: red;
+	background-repeat: no-repeat;
+	background-position: 0px -60px;
 }
 
 footer {
