--- a/CSS/style.css
+++ b/CSS/style.css
@@ -113,18 +113,18 @@ main {
 	flex-wrap: wrap;
 }
 
-#divDisc div{
+.tableCol {
 	width: 10%;
 	height: 100%;
 	margin: 0 2.14%;
 }
 
-#divDisc div div{
+.tableCol div{
 	width: 100%;
 	height: 10%;
 	margin: 38% 0;
 	border-radius: 100%;
-	background-color: red;
+	background-color: #2F3535;
 	background-repeat: no-repeat;
 	background-position: 0px -60px;
 }
