--- a/CSS/style.css
+++ b/CSS/style.css
@@ -135,6 +135,11 @@ footer {
 	background-color: red;
 }
 
+#pokemons {
+	width: 90%;
+	height: 90%;
+	margin: auto;
+}
 
 #choose {
 	z-index: 2;
@@ -145,7 +150,17 @@ footer {
 	width: 100%;
 	height: 100%;
 	display: flex;
-	flex-wrap: wrap;
+	display: none;
+}
+
+#pause {
+	z-index: 2;
+	background-color: rgba(0, 0, 0, 0);
+	top: 0;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
 	display: none;
 }
 
