--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ html {
 	width: 100%;
 	height: 100%;
 	font-family: "Pokemon_font";
-	text-shadow: 2px 2px 2px black;
+	text-shadow: 5px 5px 5px #1B21E9;
 }
 
 body {
@@ -22,7 +22,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	background-color: #2F3535;
-	color: white;
+	color: #EAF20B;
 }
 
 header {
@@ -44,7 +44,6 @@ h1 {
 	width: 100%;
 	height: 20%;
 	font-size: 7vw;
-	color: #FFDE00;
 	margin-top: 1%;
 }
 
@@ -83,7 +82,6 @@ main {
 #playerOne, #playerTwo{
 	width: 150px;
 	height: 250px;
-	background-color: blue;
 	z-index: 0;
 	position: absolute;
 	transition-duration: 0.5s;
@@ -107,7 +105,11 @@ main {
 #divDisc {
 	width: 600px;
 	height: 600px;
-	background-color: green;
+	background-color: rgba(0, 0, 0, 0.5);
+	background-image: url('../IMG/fond.png');
+	background-repeat: no-repeat;
+	background-position: 0 100px;
+	background-size: 100%;
 	border-radius: 25px;
 	display: flex;
 	flex-wrap: wrap;
@@ -127,12 +129,6 @@ main {
 	background-color: #2F3535;
 	background-repeat: no-repeat;
 	background-position: 0px -60px;
-}
-
-footer {
-	width: 100%;
-	height: 20%;
-	background-color: red;
 }
 
 #pokemons {
@@ -181,14 +177,14 @@ footer {
 }
 
 #win {
-	width: 200px;
-	height: 200px;
+	width: 150px;
+	height: 150px;
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
 #lose {
-	width: 200px;
-	height: 200px;
+	width: 150px;
+	height: 150px;
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
@@ -232,22 +228,21 @@ audio {
 	justify-content: center;
 	height: 20%;
 	font-size: 4vw;
-	color: #FFDE00;
 	border-radius: 25px;
 }
 
 #play:hover {
-	color: red;
+	color: #E12626;
 	transition-duration: 2s;
 }
 
 #player {
-	width: 20%;
+	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	font-size: 4vw;
-	color: yellow;
+	color: #EAF20B;
 	border-radius: 25px;
 	background-color: #E12626;
 }
