--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,6 +56,36 @@ main {
 	align-items: center;
 }
 
+#divDiscModule {
+	z-index: 2;
+	background-color: red;
+	top: 0;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.tableCol {
+	background-color: blue;
+	width: 10%;
+	height: 100%;
+	margin: 0 2.14%;
+}
+
+.tableCol div {
+	background-color: green;
+	width: 100%;
+	height: 10%;
+	margin: 38% 0;
+	border-radius: 100%;
+	background-color: #2F3535;
+	background-repeat: no-repeat;
+	background-position: 0px -60px;
+}
+
 .divPlayers {
 	width: 200px;
 	height: 300px;
@@ -115,7 +145,7 @@ main {
 	flex-wrap: wrap;
 }
 
-.tableCol {
+/*.tableCol {
 	width: 10%;
 	height: 100%;
 	margin: 0 2.14%;
@@ -129,7 +159,7 @@ main {
 	background-color: #2F3535;
 	background-repeat: no-repeat;
 	background-position: 0px -60px;
-}
+}*/
 
 #pokemons {
 	width: 90%;
