--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,16 +70,18 @@ main {
 
 .tableCol {
 	background-color: blue;
-	width: 10%;
+/*	width: 10%;*/
 	height: 100%;
-	margin: 0 2.14%;
+	margin: 0 1%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .tableCol div {
-	background-color: green;
 	width: 100%;
-	height: 10%;
-	margin: 38% 0;
 	border-radius: 100%;
 	background-color: #2F3535;
 	background-repeat: no-repeat;
