--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,15 +69,13 @@ main {
 }
 
 .tableCol {
-	background-color: blue;
-/*	width: 10%;*/
 	height: 100%;
 	margin: 0 1%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .tableCol div {
@@ -85,7 +83,6 @@ main {
 	border-radius: 100%;
 	background-color: #2F3535;
 	background-repeat: no-repeat;
-	background-position: 0px -60px;
 }
 
 .divPlayers {
@@ -147,22 +144,6 @@ main {
 	flex-wrap: wrap;
 }
 
-/*.tableCol {
-	width: 10%;
-	height: 100%;
-	margin: 0 2.14%;
-}
-
-.tableCol div{
-	width: 100%;
-	height: 10%;
-	margin: 38% 0;
-	border-radius: 100%;
-	background-color: #2F3535;
-	background-repeat: no-repeat;
-	background-position: 0px -60px;
-}*/
-
 #pokemons {
 	width: 90%;
 	height: 90%;
@@ -193,6 +174,23 @@ main {
 	height: 100%;
 	flex-direction: column;
 	display: none;
+}
+
+#egal {
+	z-index: 2;
+	background-color: rgba(0, 0, 0, 0.5);
+	top: 0;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+	display: none;
+}
+
+#egal p {
+	font-size: 10vw;
 }
 
 .resu {
