--- a/CSS/style.css
+++ b/CSS/style.css
@@ -219,6 +219,38 @@ main {
 	background-size: 100%;
 }
 
+#replay {
+	z-index: 3;
+	background-color: rgba(0, 0, 0, 0.5);
+	top: 0;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+#replay div{
+	width: 50%;
+	height: 50%;
+	background-color: #E12626;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#replay div:hover{
+	border: 3px solid #1B21E9;
+	background-color: #EAF20B;
+	color: #E12626
+}
+
+#replay div p {
+	font-size: 10vw;
+}
+
 #pause {
 	z-index: 2;
 	background-color: rgba(0, 0, 0, 0);
